[package]
edition = "2018"
name = "mini_pli_interpreter"
version = "0.1.0"
authors = ["Joni Mäkelä <joni.makela@gmail.com>"]

[dependencies]
log = "0.3.8"
simplelog = "0.4.2"
clap = "2.22.2"
fern = "0.4.0"
structopt = "0.1.0"
structopt-derive = "0.1.0"

[dev-dependencies]
cargo-watch = "5.0.1"
env_logger = "0.3"
#clippy = "0.0.131"
